# claude-cli

./: .gitignore  .releaser.toml  CHANGELOG.md  LICENSE  Makefile  pyproject.toml
claude_cli/: __init__.py  main.py
claude_cli/commands/: account.py  config.py  history.py  init.py  run.py  usage.py  use.py
claude_cli/core/: account.py  auth.py  config.py  history.py  ime_patch.py  usage.py
claude_cli/models/: config.py  usage.py
claude_cli/ui/: __init__.py  console.py  tables.py
claude_cli/utils/: completers.py  formatters.py
docs/: CLI_DESIGN.md
src/: __main__.py  main.py
src/commands/: account.py  init.py  run.py  status.py  usage.py
src/core/: account.py  auth.py  usage.py
src/models/: usage.py
src/ui/: prompts.py  tables.py
src/utils/: completers.py  formatters.py  validators.py
