[tool.poetry]
name = "claude-util"
version = "0.1.1"
description = "CLI tool for managing multiple Claude Code subscription accounts"
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "claude_cli"}]

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.12.0"
rich = ">=13.7.0,<14"
questionary = ">=2.0.1,<3"
pydantic = ">=2.6.0,<3"
pyyaml = ">=6.0.1,<7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9"
pytest-cov = ">=4.1.0,<5"
mypy = ">=1.8.0,<2"
ruff = ">=0.2.0"
pre-commit = ">=3.6.0,<4"
types-pyyaml = ">=6.0.12,<7"

[tool.poetry.scripts]
claude-cli = "claude_cli.main:app"
cc = "claude_cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]